--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,9 @@ nav {
   grid-template-columns: repeat(4, 1fr);
   column-gap: 15px;
 }
+
+.list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1rem;
+}
